[gd_scene load_steps=18 format=2]

[ext_resource path="res://Shared/pipes.svg" type="Texture" id=1]
[ext_resource path="res://Entities/Entities/Pipes/PipeEntity.gd" type="Script" id=2]
[ext_resource path="res://Shared/blueprints.svg" type="Texture" id=3]
[ext_resource path="res://Shared/outline2D_inner.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/line_color = Color( 0.521569, 1, 0, 1 )
shader_param/line_thickness = 0.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/line_color = Color( 0.521569, 1, 0, 1 )
shader_param/line_thickness = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/line_color = Color( 0.521569, 1, 0, 1 )
shader_param/line_thickness = 0.0

[sub_resource type="Animation" id=11]
resource_name = "DI"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -7.5 ), Vector2( 0, -20 ), Vector2( 0, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, -1, -1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "DR"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -7.5 ), Vector2( 0, -20 ), Vector2( 25, -7.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "DU"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -7.5 ), Vector2( 0, -20 ), Vector2( 25, -32.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "LD"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -32.5 ), Vector2( 0, -20 ), Vector2( -25, -7.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "LI"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -32.5 ), Vector2( 0, -20 ), Vector2( 0, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, -1, -1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "LR"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -32.5 ), Vector2( 0, -20 ), Vector2( 25, -7.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "LU"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -32.5 ), Vector2( 0, -20 ), Vector2( 25, -32.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "RI"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25, -7.5 ), Vector2( 0, -20 ), Vector2( 0, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, -1, -1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "UI"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25, -32.5 ), Vector2( 0, -20 ), Vector2( 0, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, -1, -1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "UR"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25, -32.5 ), Vector2( 0, -20 ), Vector2( 25, -7.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Item:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Item:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[node name="PipeEntity" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="."]

[node name="PipeBack" type="Sprite" parent="Sprites"]
material = SubResource( 1 )
z_index = -2
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 340, 230, 100, 100 )

[node name="InsertBack" type="Sprite" parent="Sprites"]
visible = false
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 340, 120, 100, 100 )

[node name="InsertFront" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 10, 10, 100, 100 )

[node name="Item" type="Sprite" parent="Sprites"]
visible = false
material = SubResource( 2 )
position = Vector2( 25, -7.5 )
scale = Vector2( 1e-05, 0.25 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 465, 229, 69, 90 )

[node name="PipeFront" type="Sprite" parent="Sprites"]
material = SubResource( 3 )
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 340, 10, 100, 100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DI = SubResource( 11 )
anims/DR = SubResource( 8 )
anims/DU = SubResource( 6 )
anims/LD = SubResource( 7 )
anims/LI = SubResource( 12 )
anims/LR = SubResource( 5 )
anims/LU = SubResource( 4 )
anims/RI = SubResource( 13 )
anims/UI = SubResource( 10 )
anims/UR = SubResource( 9 )
